--- a/index.html
+++ b/index.html
@@ -27,6 +27,49 @@
             </div>
         </div>        
     </div>
+
+    <div class="page-body">
+        <div class="body 1">
+            <div class="body-title">Some random information</div>
+            <div class="grid-container">
+                <div class="grid-item">
+                    <img class="grid-image">
+                    <div class="image-text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="grid-item">
+                    <img class="grid-image">
+                    <div class="image-text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="grid-item">
+                    <img class="grid-image">
+                    <div class="image-text">this is some subtext under an illustration or image</div>
+                </div>
+                <div class="grid-item">
+                    <img class="grid-image">
+                    <div class="image-text">this is some subtext under an illustration or image</div>
+                </div>
+            </div>
+        </div>
+        <div class="body 2">
+          <div class="quote-container">
+            <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</div>
+            <div class="quote-author">-Thor, God of Thunder</div>  
+          </div>
+        </div>
+        <div class="body-3">
+            <div class="blue-container">
+                <div class="action-text">
+                    <div class="action-title">Call to action! It's time!</div>
+                    <div class="action-subtitle">Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <button class="action-signup">Sign up</button>
+            </div>
+        </div>
+    </div>
     
+    <div class="footer">
+        <div class="footer-text">Copyright © Sam Phillips 2023</div>
+
+    </div>
 </body>
 </html>
